<resources>
    <string name="app_name">RaportSheet</string>
    <string name="action_settings">Settings</string>

    <string name="customer_name">Name</string>
    <string name="customer_phone">Phone no.</string>
    <string name="customer_street">Street</string>
    <string name="customer_city">City</string>
    <string name="customer_house_no">House no.</string>
    <string name="raport_date">Date</string>
    <string name="raport_customer_name">Customer name</string>
    <string name="raport_construction_site">City</string>
    <string name="raport_work_hours">Hours</string>
    <string name="raport_work_description">Work description</string>
    <string name="title_activity_detail">Raport details</string>
    <string name="action_save_raport">Save raport</string>
    <string name="action_print">Print</string>
    <string name="error_date_format">Wrong date format d.M.yy</string>
    <string name="action_delete_raport">Delete raport</string>
    <string name="raport_total_hours">Total hours</string>
    <string name="action_select_week">Select week</string>
    <string name="select_week">Week</string>
    <string name="select_day">Day</string>
    <string name="select_month">Month</string>
    <string name="action_backup_db">Backup database</string>
</resources>
