<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="de.schumann.max.raportsheet.CustomerDetailFragment"
              android:orientation="vertical"
              android:padding="10dp">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/customer_name_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/customer_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/customer_phone_no"
        android:layout_gravity="center_horizontal"
        android:hint="@string/customer_phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customer_street_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/customer_street"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/customer_house_no"
        android:layout_gravity="center_horizontal"
        android:hint="@string/customer_house_no"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customer_city_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/customer_city"/>

</LinearLayout>
