<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="de.schumann.max.raportsheet.RaportDetailFragment"
              android:orientation="vertical"
              android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/raport_date"
        android:layout_gravity="center_horizontal"
        android:hint="@string/raport_date"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/raport_customer_text"
                android:hint="@string/raport_customer_name"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/raport_city_text"
                android:hint="@string/raport_construction_site"/>
        </LinearLayout>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_customer_button"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/ic_menu_myplaces"
            android:onClick="onAddCustomerButton"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/raport_work_description"
        android:layout_gravity="center_horizontal"
        android:hint="@string/raport_work_description"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/raport_work_minutes"
        android:layout_gravity="center_horizontal"
        android:hint="@string/raport_work_minutes"/>

</LinearLayout>
